--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   {{content-for 'head'}}
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel = "stylesheet" href = "reset.css">
+  <link rel = "stylesheet" href = "styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Service worker support is disabled by default.
@@ -21,13 +23,13 @@
   -->
 </head>
 <body>
-  <camper-leaderboard-app>Loading...</camper-leaderboard-app>
+  <cl-app>Loading...</cl-app>
 
   <script src="vendor/es6-shim/es6-shim.js"></script>
   <script src="vendor/reflect-metadata/Reflect.js"></script>
   <script src="vendor/systemjs/dist/system.src.js"></script>
   <script src="vendor/zone.js/dist/zone.js"></script>
-
+  
   <script>
     System.import('system-config.js').then(function () {
       System.import('main');
