--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,17 @@
   -->
 </head>
 <body>
-  <cl-app>Loading...</cl-app>
+  <cl-app>
+    <div id = "circles">
+      <div class = "verysmall-loading"></div>
+      <div class = "small-loading"></div>
+      <div class = "medium-loading"></div>
+      <div class = "big-loading"></div>
+      <div class = "medium-loading"></div>
+      <div class = "small-loading"></div>
+      <div class = "verysmall-loading"></div>
+    </div>
+</cl-app>
 
   <script src="vendor/es6-shim/es6-shim.js"></script>
   <script src="vendor/reflect-metadata/Reflect.js"></script>
