--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>CAMPERLEADERBOARD</title>
-  <base href="/">
+  <base href="./">
   
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel = "stylesheet" href = "reset.css">
